[package]
name = "tab"
version = "0.1.0"
authors = ["Thomas <thomastimmer11@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smallvec = "1.6"
derive_more = "0.99"
serde-value = "0.7"
ordered-multimap = "0.4"
decorum = "0.3"

[dev-dependencies]
rand = "0.8"
